--- a/app/src/main/res/layout/activity_list_product.xml
+++ b/app/src/main/res/layout/activity_list_product.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.developer.nguyenngocbaothy.webserviceptit.MainActivity">
+    tools:context="com.developer.nguyenngocbaothy.webserviceptit.ListProduct">
 
-    <Button
-        android:id="@+id/btnProduct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Product"
+    <ListView
+        android:id="@+id/listProduct"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
