--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -19,7 +19,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.502" />
+        app:layout_constraintHorizontal_bias="0.502"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -30,7 +32,8 @@
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView8"
@@ -41,7 +44,8 @@
         android:layout_marginTop="41dp"
         app:layout_constraintTop_toBottomOf="@+id/textView7"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView9"
@@ -49,10 +53,11 @@
         android:layout_height="wrap_content"
         android:text="Price:"
         android:textSize="20sp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="45dp"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView10"
@@ -63,7 +68,8 @@
         android:layout_marginTop="56dp"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView11"
@@ -74,7 +80,8 @@
         android:layout_marginTop="46dp"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <EditText
         android:id="@+id/edtPrice"
@@ -83,10 +90,11 @@
         android:ems="10"
         android:inputType="number"
         android:text=""
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/edtCate"
         app:layout_constraintLeft_toRightOf="@+id/textView9"
-        android:layout_marginLeft="86dp" />
+        android:layout_marginLeft="86dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
     <EditText
         android:id="@+id/edtName"
@@ -101,22 +109,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.897" />
-
-    <EditText
-        android:id="@+id/edtCate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="22dp"
-        android:ems="10"
-        android:text=""
-        android:inputType="number"
-        app:layout_constraintHorizontal_bias="0.724"
-        app:layout_constraintLeft_toRightOf="@+id/textView8"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName" />
+        app:layout_constraintHorizontal_bias="0.897"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtIntro"
@@ -128,7 +123,8 @@
         android:inputType="textPersonName"
         android:text=""
         app:layout_constraintLeft_toRightOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/edtPrice" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPrice"
+        android:layout_marginStart="90dp" />
 
     <EditText
         android:id="@+id/edtDes"
@@ -143,7 +139,9 @@
         app:layout_constraintHorizontal_bias="0.724"
         app:layout_constraintLeft_toRightOf="@+id/textView11"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtIntro" />
+        app:layout_constraintTop_toBottomOf="@+id/edtIntro"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btnAdd"
@@ -153,5 +151,18 @@
         android:layout_marginTop="22dp"
         app:layout_constraintTop_toBottomOf="@+id/edtDes"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="216dp"
+        android:layout_height="22dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="348dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
