--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -17,7 +17,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.136" />
+        app:layout_constraintHorizontal_bias="0.136"
+        android:layout_marginStart="109dp"
+        android:layout_marginEnd="8dp" />
 
     <TextView
         android:id="@+id/textView"
@@ -28,7 +30,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView2"
@@ -39,7 +42,8 @@
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView3"
@@ -50,7 +54,8 @@
         android:layout_marginTop="19dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView4"
@@ -61,7 +66,8 @@
         android:layout_marginTop="48dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView5"
@@ -72,7 +78,8 @@
         android:layout_marginTop="38dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <EditText
         android:id="@+id/edtName"
@@ -87,7 +94,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.864" />
+        app:layout_constraintHorizontal_bias="0.864"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtCate"
@@ -102,7 +111,9 @@
         app:layout_constraintHorizontal_bias="0.794"
         app:layout_constraintLeft_toRightOf="@+id/textView2"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName" />
+        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtPrice"
@@ -117,7 +128,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.891" />
+        app:layout_constraintHorizontal_bias="0.891"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtIntro"
@@ -132,7 +145,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.111" />
+        app:layout_constraintHorizontal_bias="0.111"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtDes"
@@ -147,7 +162,9 @@
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintLeft_toRightOf="@+id/textView5"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtIntro" />
+        app:layout_constraintTop_toBottomOf="@+id/edtIntro"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/btnUpdate"
@@ -160,7 +177,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.733" />
+        app:layout_constraintVertical_bias="0.733"
+        android:layout_marginStart="28dp" />
 
     <Button
         android:id="@+id/btnSave"
@@ -173,5 +191,18 @@
         android:layout_marginBottom="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/edtDes"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginEnd="16dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="64dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
