--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -51,9 +51,9 @@
         android:layout_height="wrap_content"
         android:text="Price:"
         android:textSize="20sp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="39dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="36dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="28dp" />
 
@@ -63,9 +63,9 @@
         android:layout_height="wrap_content"
         android:text="Introtruction:"
         android:textSize="20sp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="28dp" />
 
@@ -99,38 +99,21 @@
         android:layout_marginEnd="8dp" />
 
     <EditText
-        android:id="@+id/edtCate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintHorizontal_bias="0.794"
-        app:layout_constraintLeft_toRightOf="@+id/textView2"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <EditText
         android:id="@+id/edtPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/edtCate"
         app:layout_constraintLeft_toRightOf="@+id/textView3"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner2" />
 
     <EditText
         android:id="@+id/edtIntro"
@@ -139,7 +122,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="17dp"
         app:layout_constraintTop_toBottomOf="@+id/edtPrice"
         app:layout_constraintLeft_toRightOf="@+id/textView4"
         android:layout_marginLeft="8dp"
@@ -155,7 +138,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -185,24 +168,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/edtDes"
-        app:layout_constraintVertical_bias="1.0"
-        android:layout_marginEnd="16dp" />
+        app:layout_constraintVertical_bias="0.636"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintLeft_toRightOf="@+id/btnUpdate"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/btnCancel"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.62" />
 
     <Spinner
         android:id="@+id/spinner2"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="64dp"
+        android:layout_width="213dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="27dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.804" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comeback"
+        android:layout_marginTop="21dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtDes"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.111" />
 </android.support.constraint.ConstraintLayout>
