--- a/app/src/main/res/layout/activity_add_category.xml
+++ b/app/src/main/res/layout/activity_add_category.xml
@@ -15,18 +15,20 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="105dp"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Parent id:"
+        android:text="Parent cate:"
         android:textSize="20sp"
         android:layout_marginTop="63dp"
         app:layout_constraintTop_toBottomOf="@+id/textView15"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView17"
@@ -37,7 +39,8 @@
         android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@+id/textView16"
         android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <EditText
         android:id="@+id/edtName"
@@ -49,47 +52,35 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="86dp"
         android:layout_marginRight="27dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <EditText
-        android:id="@+id/edtParent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="27dp"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text=""
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName" />
+        android:layout_marginEnd="27dp" />
 
     <EditText
         android:id="@+id/edtDes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="27dp"
-        android:layout_marginTop="61dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtParent" />
+        android:layout_marginEnd="27dp"
+        android:layout_marginTop="66dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner4" />
 
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add"
-        android:layout_marginLeft="269dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="93dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/edtDes"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/textView18"
@@ -102,5 +93,37 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comeback"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="51dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtDes"
+        app:layout_constraintLeft_toRightOf="@+id/btnAdd"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <Spinner
+        android:id="@+id/spinner4"
+        android:layout_width="207dp"
+        android:layout_height="19dp"
+        android:layout_marginTop="63dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView16"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.27" />
 </android.support.constraint.ConstraintLayout>
