--- a/app/src/main/res/layout/activity_detail_category.xml
+++ b/app/src/main/res/layout/activity_detail_category.xml
@@ -15,18 +15,20 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="71dp"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Parent id:"
+        android:text="Parent Cate:"
         android:textSize="20sp"
         android:layout_marginTop="55dp"
         app:layout_constraintTop_toBottomOf="@+id/textView12"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <TextView
         android:id="@+id/textView14"
@@ -37,7 +39,8 @@
         android:layout_marginTop="69dp"
         app:layout_constraintTop_toBottomOf="@+id/textView13"
         android:layout_marginLeft="28dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <EditText
         android:id="@+id/edtName"
@@ -52,22 +55,9 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.878" />
-
-    <EditText
-        android:id="@+id/edtParent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="36dp"
-        android:ems="10"
-        android:inputType="number"
-        android:text=""
-        app:layout_constraintHorizontal_bias="0.794"
-        app:layout_constraintLeft_toRightOf="@+id/textView13"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtName" />
+        app:layout_constraintHorizontal_bias="0.878"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <EditText
         android:id="@+id/edtDes"
@@ -76,13 +66,15 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/edtParent"
         app:layout_constraintLeft_toRightOf="@+id/textView14"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.529" />
+        app:layout_constraintHorizontal_bias="0.529"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/spinner3" />
 
     <Button
         android:id="@+id/btnUpdate"
@@ -92,15 +84,46 @@
         android:layout_marginLeft="28dp"
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="28dp" />
 
     <Button
         android:id="@+id/btnSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
-        android:layout_marginRight="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="116dp"
+        app:layout_constraintLeft_toRightOf="@+id/btnUpdate"
+        android:layout_marginLeft="37dp"
+        android:layout_marginStart="37dp" />
+
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Comback"
+        app:layout_constraintLeft_toRightOf="@+id/btnSave"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="116dp" />
+        android:layout_marginBottom="116dp"
+        app:layout_constraintHorizontal_bias="0.882"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
+
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="214dp"
+        android:layout_height="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="337dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView13"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtName"
+        app:layout_constraintVertical_bias="1.0" />
 </android.support.constraint.ConstraintLayout>
